--- a/app/src/main/res/layout/column_view.xml
+++ b/app/src/main/res/layout/column_view.xml
@@ -24,13 +24,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
         tools:text="1"
         android:textColor="@color/colorPrimary"
         android:textSize="12sp"
         android:fontFamily="@font/roboto_medium"
 
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
