--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackground"
-        tools:context=".activity.MainActivity">
+        tools:context=".MainActivity">
 
         <fragment
             android:id="@+id/nav_host_fragment_app"
