--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -190,7 +190,9 @@
             app:layout_constraintTop_toTopOf="parent"
 
             app:layout_constraintVertical_bias="0.925"
-            app:maxMilisecond="10000"
+
+            app:maxMilisecond="@{vm.maxRecordTime}"
+
             app:progressColor="@color/colorPrimary"
             app:progressEmptyColor="@color/instrumentBackground"
             app:progressStroke="15" />
