--- a/app/src/main/res/layout/table_view_column_header_layout.xml
+++ b/app/src/main/res/layout/table_view_column_header_layout.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="columnHeader"
-            type="com.sachinreddy.feature.data.table.ColumnHeader"
+            type="com.evrencoskun.tableview.data.ColumnHeader"
             />
         <variable
             name="vm"
