--- a/app/src/main/res/layout/table_view_row_header_layout.xml
+++ b/app/src/main/res/layout/table_view_row_header_layout.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="rowHeader"
-            type="com.sachinreddy.feature.data.table.RowHeader" />
+            type="com.evrencoskun.tableview.data.RowHeader" />
 
         <variable
             name="vm"
