--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -24,35 +24,26 @@
             android:layout_margin="10dp"
             android:backgroundTint="@color/colorPrimary">
 
-            <ImageButton
-                android:id="@+id/action_button"
+            <com.sachinreddy.audiorecordview.AudioRecordView
+                android:id="@+id/audio_record_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                app:chunkAlignTo="center"
+                app:chunkRoundedCorners="true"
+                app:chunkSoftTransition="true"
 
-                android:onClick="@{() -> vm.onClickCellButton(cell)}"
+                android:cellData="@{cell.data}"
 
-                android:background="#00000000"
-                android:src="@drawable/ic_play"
-                android:tint="@color/cardBackground" />
+                app:chunkColor="@color/cardBackground"
 
-            <TextView
-                android:id="@+id/test_number"
+                app:chunkSpace="0dp"
+                app:chunkWidth="2dp"
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|left"
+                app:chunkMaxHeight="40dp"
+                app:chunkMinHeight="1dp"
 
-                android:layout_marginStart="4dp"
-                android:layout_marginBottom="4dp"
-
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="12sp"
-                android:fontFamily="@font/roboto_medium"
-
-                android:number="@{cell.data.size()}"
-                tools:text="1" />
+                app:direction="leftToRight" />
 
         </androidx.cardview.widget.CardView>
 
