--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,22 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/app_nav_graph" />
 
+        <TextView
+            android:id="@+id/test"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Hello"
+            android:textSize="20dp"
+            android:textColor="@color/whitesmoke"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            android:layout_marginBottom="180dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
